--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <!-- Top Container -->
         <section class="top-container" id="top-container">
             <header class="showcase">
-                <h1>Your Web Presence</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsam! Nihil quo minima nulla atque!
+                <h1>Football Club London</h1>
+                <p>A chance to play with amateur and professional players. Best club in town.
                 </p>
                 <a href="#" class="btn">Read More</a>
             </header>
             <div class="top-box top-box-a">
                 <h4>Membership</h4>
-                <p class="price">$199/mo</p>
+                <p class="price">&#xa3;10/mo</p>
                 <a href="" class="btn">Buy Now</a>
             </div>
             <div class="top-box top-box-b">
                 <h4>Pro Membership</h4>
-                <p class="price">$299/mo</p>
+                <p class="price">&#xa3;50/mo</p>
                 <a href="" class="btn">Buy Now</a>
             </div>
         </section>
