Updates: Showcase and Activities

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <a href="#top-container">Home</a>
                 </li>
                 <li>
-                    <a href="#boxes">Services</a>
+                    <a href="#activity">Activity</a>
                 </li>
                 <li>
                     <a href="#info">About</a>
@@ -29,10 +29,9 @@
         <!-- Top Container -->
         <section class="top-container" id="top-container">
             <header class="showcase">
-                <h1>Football Club London</h1>
+                <h1>Football Club</h1>
                 <p>A chance to play with amateur and professional players. Best club in town.
                 </p>
-                <a href="#" class="btn">Read More</a>
             </header>
             <div class="top-box top-box-a">
                 <h4>Membership</h4>
@@ -47,28 +46,31 @@
         </section>
 
         <!-- Boxes Section -->
+        <div class="activity" id="activity">
+        <h2>Activity</h2>
         <section class="boxes" id="boxes">
             <div class="box">
-                <i class="fas fa-chart-pie fa-4x"></i>
-                <h3>Analytics</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, expedita?</p>
+                <img src="./img/talking.png" alt="">
+                <h3>News</h3>
+                <p>find out the latest news from your best friends.</p>
             </div>
             <div class="box">
-                <i class="fas fa-globe fa-4x"></i>
-                <h3>Marketing</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, expedita?</p>
+                <img src="./img/player.png" alt="">
+                <h3>Play</h3>
+                <p>Have the most relaxing time playing the best matches with friends.</p>
             </div>
             <div class="box">
-                <i class="fas fa-cog fa-4x"></i>
-                <h3>Development</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, expedita?</p>
+                <img src="./img/tshirt.png" alt="">
+                <h3>Share</h3>
+                <p>Share your things with others. </p>
             </div>
             <div class="box">
-                <i class="fas fa-users fa-4x"></i>
-                <h3>Support</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, expedita?</p>
+                <img src="./img/stadium.png" alt="">
+                <h3>Games</h3>
+                <p>See the best games at the stadium with friends.</p>
             </div>
         </section>
+        </div>
 
         <!-- Info Section -->
         <section class="info" id="info">
