--- a/index.html
+++ b/index.html
@@ -7,31 +7,34 @@
     <link rel="stylesheet" href="./styles.css" type="text/css" />
 </head>
 <body>
-    <div class="wrapper">
-        
-        <!-- Navigation -->
-        <nav class="main-nav">
-            <ul>
-                <li>
-                    <a href="#top-container">Home</a>
-                </li>
-                <li>
-                    <a href="#activity">Activity</a>
-                </li>
-                <li>
-                    <a href="#info">About</a>
-                </li>                
-                <li>
-                    <a href="#footer">Contact</a>
-                </li>
-            </ul>
-        </nav>
+    <!-- Navigation -->
+    <nav class="main-nav">
+        <ul>
+            <li>
+                <a href="#top-container">Home</a>
+            </li>
+            <li>
+                <a href="#activity">Activity</a>
+            </li>
+            <li>
+                <a href="#about">About</a>
+            </li>
+            <li>
+                <a href="#portfolio">Gallery</a>
+            </li>
+            <li>
+                <a href="#footer">Contact</a>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="wrapper">       
 
         <!-- Top Container -->
         <section class="top-container" id="top-container">
             <header class="showcase">
                 <h1>Football Club</h1>
-                <p>A chance to play with amateur and professional players. Best club in town.
+                <p>A chance to meet amateur and <br>professional players. <br>Best football club in town.
                 </p>
             </header>
             <div class="top-box top-box-a">
@@ -50,70 +53,106 @@
         <div class="activity" id="activity">
         <h2>Activity</h2>
         <section class="boxes" id="boxes">
-            <div class="box">
+            <div class="box news">
                 <img src="./img/talking.png" alt="">
                 <h3>News</h3>
                 <p>find out the latest news from your best friends.</p>
+                <div class="overlay image"><img src="./img/peopleTalking.jpg" alt=""> </div>
             </div>
-            <div class="box">
+            <div class="box play">
                 <img src="./img/player.png" alt="">
                 <h3>Play</h3>
                 <p>Have the most relaxing time playing the best matches with friends.</p>
+                <div class="overlay image"><img src="./img/play.jpg" alt=""> </div>
             </div>
-            <div class="box">
+            <div class="box share">
                 <img src="./img/tshirt.png" alt="">
                 <h3>Share</h3>
                 <p>Share your things with others. </p>
+                <div class="overlay image"><img src="./img/share.jpg" alt=""> </div>
             </div>
-            <div class="box">
+            <div class="box games">
                 <img src="./img/stadium.png" alt="">
                 <h3>Games</h3>
                 <p>See the best games at the stadium with friends.</p>
+                <div class="overlay image"><img src="./img/games.jpg" alt=""> </div>
             </div>
         </section>
         </div>
 
         <!-- Info Section -->
-        <section class="info" id="info">
-            <img src="https://image.ibb.co/j4Qz8x/pic1.jpg" alt="">
+        <section class="about" id="about">
+            <h2>About Us</h2>
+        <div class="info" id="info">
+            <img src="./img/fanclub.jpg" alt="">
             <div>
-                <h2>Your Business On The Web</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae alias reiciendis deleniti possimus
-                    nemo non repellendus?
-                    Quae atque vero modi quidem! Autem cupiditate fugit doloribus ad amet, asperiores provident commodi.
+                <h3>Immerse yourself in the world of the Blues by becoming a Fan Club member today. With membership,
+                    you'll have access to:</h3>
+                    <ul>
+                        <li>
+                            A huge library of football video content including full match highlights, behind-the-scenes
+                            footage, exclusive interviews and features
+                        </li>
+                        <li>
+                            The latest clubs news and happenings
+                        </li>
+                        <li>
+                            The club's official fan newsletter and emails most relevant to you
+                        </li>
+                        <li>
+                            Regular competitions exclusively for Fan Club members
+                        </li>
+                        <li>
+                            Link up with the nearest supporters fan club wherever you are
+                        </li>
+                        <li>
+                            Interact with fans around the city, share your thoughts and discuss all the goings on in our
+                            cosy location
+                        </li>
+                    </ul>
+                <p>
+                    In addition, your Fan Club membership unlocks exclusive rewards specially tailored to fuel your
+                    passion for football.
                 </p>
-                <a href="#" class="btn">Learn More</a>
             </div>
+        </div>
         </section>
 
         <!-- Portfolio -->
         <section class="portfolio" id="portfolio">
+            <h2>Gallery</h2>
             <div>
-                <img src="https://source.unsplash.com/random/200x200" alt="">
+                <img src="./img/gallery-01.jpg" alt="">
             </div>
             <div>
-                <img src="https://source.unsplash.com/random/201x200" alt="">
+                <img src="./img/gallery-02.jpg" alt="">
             </div>
             <div>
-                <img src="https://source.unsplash.com/random/202x200" alt="">
+                <img src="./img/gallery-03.jpg" alt="">
             </div>
             <div>
-                <img src="https://source.unsplash.com/random/203x200" alt="">
+                <img src="./img/gallery-04.jpg" alt="">
             </div>
             <div>
-                <img src="https://source.unsplash.com/random/204x200" alt="">
+                <img src="./img/gallery-05.jpg" alt="">
             </div>
             <div>
-                <img src="https://source.unsplash.com/random/205x200" alt="">
+                <img src="./img/gallery-06.jpg" alt="">
             </div>
             <div>
-                <img src="https://source.unsplash.com/random/206x200" alt="">
+                <img src="./img/gallery-07.jpg" alt="">
             </div>
             <div>
-                <img src="https://source.unsplash.com/random/207x200" alt="">
+                <img src="./img/gallery-08.jpg" alt="">
             </div>
             <div>
-                <img src="https://source.unsplash.com/random/208x200" alt="">
+                <img src="./img/gallery-09.jpg" alt="">
+            </div>
+            <div>
+                <img src="./img/gallery-10.jpg" alt="">
+            </div>
+            <div>
+                <img src="./img/gallery-11.jpg" alt="">
             </div>
         </section>
 
@@ -132,7 +171,7 @@
 
         <!-- Footer -->
         <footer id="footer">
-            <p>GridBiz &copy; 2018</p>
+            <p>Football Club &copy; 2021</p>
         </footer>
 
     </div>
