--- a/index.html
+++ b/index.html
@@ -23,10 +23,26 @@
                 <a href="#portfolio">Gallery</a>
             </li>
             <li>
-                <a href="#footer">Contact</a>
+                <a href="#contact">Contact</a>
             </li>
         </ul>
+
+        <div class="mobile-btn">
+            <a id="menu-btn" onclick="myFunction()" class="fa fa-bars fa-2x"></a>
+        </div>
+        
     </nav>
+
+     <!-- Mobile Menu -->
+     <div id="mobile-menu" class="mobile-menu">
+         <ul class="mobile-links">
+             <li class="nav-list"><a href="#">Home</a></li>
+             <li class="nav-list"><a href="#">Gallery</a></li>
+             <li class="nav-list"><a href="#">Blog</a></li>
+             <li class="nav-list"><a href="#">Portfolio</a></li>
+             <li class="nav-list"><a href="#">Contact</a></li>
+         </ul>
+     </div>
 
     <div class="wrapper">       
 
