--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Club Website</title>
     <link rel="stylesheet" href="./styles.css" type="text/css" />
 </head>
+
 <body>
     <!-- Navigation -->
     <nav class="main-nav">
@@ -27,24 +29,9 @@
             </li>
         </ul>
 
-        <div class="mobile-btn">
-            <a id="menu-btn" onclick="myFunction()" class="fa fa-bars fa-2x"></a>
-        </div>
-        
     </nav>
 
-     <!-- Mobile Menu -->
-     <div id="mobile-menu" class="mobile-menu">
-         <ul class="mobile-links">
-             <li class="nav-list"><a href="#">Home</a></li>
-             <li class="nav-list"><a href="#">Gallery</a></li>
-             <li class="nav-list"><a href="#">Blog</a></li>
-             <li class="nav-list"><a href="#">Portfolio</a></li>
-             <li class="nav-list"><a href="#">Contact</a></li>
-         </ul>
-     </div>
-
-    <div class="wrapper">       
+    <div class="wrapper">
 
         <!-- Top Container -->
         <section class="top-container" id="top-container">
@@ -67,43 +54,43 @@
 
         <!-- Boxes Section -->
         <div class="activity" id="activity">
-        <h2>ACTIVITY</h2>
-        <section class="boxes" id="boxes">
-            <div class="box news">
-                <img src="./img/talking.png" alt="">
-                <h3>News</h3>
-                <p>find out the latest news from your best friends.</p>
-                <div class="overlay image"><img src="./img/peopleTalking.jpg" alt=""> </div>
-            </div>
-            <div class="box play">
-                <img src="./img/player.png" alt="">
-                <h3>Play</h3>
-                <p>Have the most relaxing time playing the best matches with friends.</p>
-                <div class="overlay image"><img src="./img/play.jpg" alt=""> </div>
-            </div>
-            <div class="box share">
-                <img src="./img/tshirt.png" alt="">
-                <h3>Share</h3>
-                <p>Share your things with others. </p>
-                <div class="overlay image"><img src="./img/share.jpg" alt=""> </div>
-            </div>
-            <div class="box games">
-                <img src="./img/stadium.png" alt="">
-                <h3>Games</h3>
-                <p>See the best games at the stadium with friends.</p>
-                <div class="overlay image"><img src="./img/games.jpg" alt=""> </div>
-            </div>
-        </section>
+            <h2>ACTIVITY</h2>
+            <section class="boxes" id="boxes">
+                <div class="box news">
+                    <img src="./img/talking.png" alt="">
+                    <h3>News</h3>
+                    <p>find out the latest news from your best friends.</p>
+                    <div class="overlay image"><img src="./img/peopleTalking.jpg" alt=""> </div>
+                </div>
+                <div class="box play">
+                    <img src="./img/player.png" alt="">
+                    <h3>Play</h3>
+                    <p>Have the most relaxing time playing the best matches with friends.</p>
+                    <div class="overlay image"><img src="./img/play.jpg" alt=""> </div>
+                </div>
+                <div class="box share">
+                    <img src="./img/tshirt.png" alt="">
+                    <h3>Share</h3>
+                    <p>Share your things with others. </p>
+                    <div class="overlay image"><img src="./img/share.jpg" alt=""> </div>
+                </div>
+                <div class="box games">
+                    <img src="./img/stadium.png" alt="">
+                    <h3>Games</h3>
+                    <p>See the best games at the stadium with friends.</p>
+                    <div class="overlay image"><img src="./img/games.jpg" alt=""> </div>
+                </div>
+            </section>
         </div>
 
         <!-- Info Section -->
         <section class="about" id="about">
             <h2>ABOUT US</h2>
-        <div class="info" id="info">
-            <img src="./img/fanclub.jpg" alt="">
-            <div>
-                <h3>Immerse yourself in the world of the Blues by becoming a Fan Club member today. With membership,
-                    you'll have access to:</h3>
+            <div class="info" id="info">
+                <img src="./img/fanclub.jpg" alt="">
+                <div>
+                    <h3>Immerse yourself in the world of the Blues by becoming a Fan Club member today. With membership,
+                        you'll have access to:</h3>
                     <ul>
                         <li>
                             A huge library of football video content including full match highlights, behind-the-scenes
@@ -126,12 +113,12 @@
                             cosy location
                         </li>
                     </ul>
-                <p>
-                    In addition, your Fan Club membership unlocks exclusive rewards specially tailored to fuel your
-                    passion for football.
-                </p>
+                    <p>
+                        In addition, your Fan Club membership unlocks exclusive rewards specially tailored to fuel your
+                        passion for football.
+                    </p>
+                </div>
             </div>
-        </div>
         </section>
 
         <!-- Portfolio -->
@@ -173,44 +160,48 @@
         </section>
 
         <!-- Contact -->
-        <section class="contact" id="contact">    
+        <section class="contact" id="contact">
             <h2>CONTACT</h2>
             <div class="contactus">
                 <div>
-                <p>To contact the club by email please first select a department from the dropdown menu and then fill in
-                    the form.
-                    <br><br>
-                    Please read the Frequently Asked Questions before contacting us as your enquiry might have already
-                    been answered there.
-                    <br><br>
-                    Please keep correspondence polite and courteous at all times, even if you wish to make a complaint.
-                    <br><br>
-                    Our staff will do their best to help with your enquiry but they will be unable to respond to
-                    messages that contain swearing or are abusive. 
-                    <br><br>
-                    All calls and emails are logged.
-                    <br><br>
-                    Please let us know if you would like to be contacted by us and its group companies with news
-                    and promotional information about football clubs, official sponsors and partners and their products
-                    and services, where we have the relevant contact details... by email
-                    <br><br>
-                    Please read our Privacy Policy to learn more about ou club and its group companies, how we use
-                    your information and how to change your mind about receiving marketing from us.
-                </p>
+                    <p>To contact the club by email please first select a department from the dropdown menu and then
+                        fill in
+                        the form.
+                        <br><br>
+                        Please read the Frequently Asked Questions before contacting us as your enquiry might have
+                        already
+                        been answered there.
+                        <br><br>
+                        Please keep correspondence polite and courteous at all times, even if you wish to make a
+                        complaint.
+                        <br><br>
+                        Our staff will do their best to help with your enquiry but they will be unable to respond to
+                        messages that contain swearing or are abusive.
+                        <br><br>
+                        All calls and emails are logged.
+                        <br><br>
+                        Please let us know if you would like to be contacted by us and its group companies with news
+                        and promotional information about football clubs, official sponsors and partners and their
+                        products
+                        and services, where we have the relevant contact details... by email
+                        <br><br>
+                        Please read our Privacy Policy to learn more about ou club and its group companies, how we use
+                        your information and how to change your mind about receiving marketing from us.
+                    </p>
                 </div>
 
                 <div id="formtext">
-                <form action="POST">
-                    <label for="name-input">Name: </label>
-                    <input type="text" id="name-input">
-                    <br><br>
-                    <label for="phone-input">Phone: </label>
-                    <input type="tel" id="phone-input">
-                    <br><br>
-                    <label for="email-input">Email: </label>
-                    <input type="email" id="email-input">
-                    <br><br>
-                    <label for="department">Department</label>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <form action="POST">
+                        <label for="name-input">Name: </label>
+                        <input type="text" id="name-input">
+                        <br><br>
+                        <label for="phone-input">Phone: </label>
+                        <input type="tel" id="phone-input">
+                        <br><br>
+                        <label for="email-input">Email: </label>
+                        <input type="email" id="email-input">
+                        <br><br>
+                        <label for="department">Department</label>&nbsp;&nbsp;&nbsp;&nbsp;
                         <select id="department" name="department">
                             <option value="membership">Membership</option>
                             <option value="competitions">Competitions</option>
@@ -218,32 +209,32 @@
                             <option value="tickets">tickets</option>
                             <option value="feedback">Feedback</option>
                         </select>
-                    <br><br>
-                    <label for="therapy-input">For which location in London?</label>
-                    <br>
-                    <input type="checkbox" id="lnw" name="lnw"><label for="lnw">Nort </label>
-                    <input type="checkbox" id="lne" name="lne"><label for="lne">East </label>
-                    <input type="checkbox" id="ls" name="ls"><label for="ls">South </label>
-                    <input type="checkbox" id="lw" name="lw"><label for="lw">South </label>
-                    <br><br>
-                    <label for="fixing-speed">Membership type:</label>
-                    <br>
-                    <input type="radio" name="normal" id="normal"><label for="normal">Standard</label>
-                    <input type="radio" name="pro" id="pro"><label for="pro">Pro</label>
-                    <br><br>
-                    <label for="input-date">Reservation: </label><br>
-                    <input type="date" id="input-date" min="2021-03-08" max="2022-03-30">
-                    <input type="time" min="08:00" max="18:00">
-                    <br><br>
-                    <label for="input-extra">More details: </label>
-                    <br>
-                    <textarea name="input-extra" id="input-extra" cols="40" rows="12"
-                        placeholder="Tell us more details about what you want. We are here to help you."></textarea>
-                    <br><br>
-                    <input type="submit" value="Submit">
-                </form>
+                        <br><br>
+                        <label for="therapy-input">For which location in London?</label>
+                        <br>
+                        <input type="checkbox" id="lnw" name="lnw"><label for="lnw">Nort </label>
+                        <input type="checkbox" id="lne" name="lne"><label for="lne">East </label>
+                        <input type="checkbox" id="ls" name="ls"><label for="ls">South </label>
+                        <input type="checkbox" id="lw" name="lw"><label for="lw">South </label>
+                        <br><br>
+                        <label for="fixing-speed">Membership type:</label>
+                        <br>
+                        <input type="radio" name="normal" id="normal"><label for="normal">Standard</label>
+                        <input type="radio" name="pro" id="pro"><label for="pro">Pro</label>
+                        <br><br>
+                        <label for="input-date">Reservation: </label><br>
+                        <input type="date" id="input-date" min="2021-03-08" max="2022-03-30">
+                        <input type="time" min="08:00" max="18:00">
+                        <br><br>
+                        <label for="input-extra">More details: </label>
+                        <br>
+                        <textarea name="input-extra" id="input-extra" cols="40" rows="12"
+                            placeholder="Tell us more details about what you want. We are here to help you."></textarea>
+                        <br><br>
+                        <input type="submit" value="Submit">
+                    </form>
                 </div>
-            
+
                 <div>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.540423056441!2d-0.12174238407507898!3d51.50330061882359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604b900d26973%3A0x4291f3172409ea92!2slastminute.com%20London%20Eye!5e0!3m2!1sen!2suk!4v1615316791708!5m2!1sen!2suk"
@@ -258,6 +249,7 @@
         </footer>
 
     </div>
-    <!-- Wrapper Ends -->    
+    <!-- Wrapper Ends -->
 </body>
+
 </html>
